src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.custom-scrollbar::-webkit-scrollbar {
  width: 12px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: #e2e8f0;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: #262626;
  border: 3px solid #262626;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background-color: #0d0d0d;
}

.gradient-text {
  background: linear-gradient(to right, #ffffff, #c1c7d6);
  /* Ganti warna sesuai kebutuhan */
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

